# infolang-pipecat

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/infolang_pipecat/: __init__.py  namespaces.py  processor.py
tests/: conftest.py  test_live_smoke.py  test_namespaces.py  test_processor.py
